--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,7 @@ pure-eval==0.2.2
 pycparser==2.21
 pygments==2.17.2
 pyparsing==3.1.1
+pyrealsense2==2.54.2.5684
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3.post1
