--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ jupyterlab-pygments==0.2.2
 jupyterlab-server==2.25.2
 jupyterlab-widgets==3.0.9
 kiwisolver==1.4.5
+lxml==4.9.3
 MarkupSafe==2.1.3
 matplotlib==3.7.4
 matplotlib-inline==0.1.6
@@ -87,6 +88,7 @@ pyparsing==3.1.1
 pyrealsense2==2.54.2.5684
 python-dateutil==2.8.2
 python-json-logger==2.0.7
+pytransform3d==3.5.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.1
