--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
 deprecation==2.1.0
+engineering-notation==0.10.0
 exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.19.0
@@ -37,19 +38,19 @@ joblib==1.3.2
 json5==0.9.14
 jsonschema==4.20.0
 jsonschema-specifications==2023.11.1
-jupyter-client==8.6.0
-jupyter-core==5.5.0
 jupyter-events==0.9.0
-jupyter-packaging==0.12.3
-jupyter-server==2.11.0
-jupyter-server-fileid==0.9.0
-jupyter-server-terminals==0.4.4
-jupyter-server-ydoc==0.8.0
 jupyter-ydoc==0.2.5
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+jupyter_packaging==0.12.3
+jupyter_server==2.11.0
+jupyter_server_fileid==0.9.0
+jupyter_server_terminals==0.4.4
+jupyter_server_ydoc==0.8.0
 jupyterlab==3.6.6
 jupyterlab-pygments==0.2.2
-jupyterlab-server==2.25.2
 jupyterlab-widgets==3.0.9
+jupyterlab_server==2.25.2
 kiwisolver==1.4.5
 lxml==4.9.3
 MarkupSafe==2.1.3
@@ -62,7 +63,7 @@ nbconvert==7.11.0
 nbformat==5.9.2
 nest-asyncio==1.5.8
 notebook==6.5.6
-notebook-shim==0.2.3
+notebook_shim==0.2.3
 numpy==1.24.4
 open3d==0.13.0
 opencv-contrib-python==4.8.1.78
@@ -75,7 +76,8 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==10.1.0
-pkgutil-resolve-name==1.3.10
+pkg_resources==0.0.0
+pkgutil_resolve_name==1.3.10
 platformdirs==4.0.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.41
@@ -83,8 +85,11 @@ psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
-pygments==2.17.2
+Pygments==2.17.2
 pyparsing==3.1.1
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
 pyrealsense2==2.54.2.5684
 python-dateutil==2.8.2
 python-json-logger==2.0.7
@@ -112,7 +117,7 @@ tomlkit==0.12.3
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.13.0
-typing-extensions==4.8.0
+typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.1.0
 wcwidth==0.2.12
